--- a/package.json
+++ b/package.json
@@ -5,6 +5,9 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
+    "dev:patient": "vite --port 8080",
+    "dev:doctor": "vite --port 8081",
+    "dev:hospital": "vite --port 8082",
     "build": "vite build",
     "build:dev": "vite build --mode development",
     "lint": "eslint .",
